[metadata]
name = mistral-celery-actions
author = Collabo Team
author-email = ariane.rocha@collabo.com.br
summary = A Mistral action to call celery tasks
description-file = README.md
home-page = https://github.com/collabo-br/mistral-celery-actions
license = MIT License
classifier =
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Internet
    Topic :: Utilities

[files]
packages =
    celery_actions

[wheel]
universal = 1

[entry_points]
mistral.actions = 
    celery.sync-task = celery_actions.base:BaseAction
    celery.async-task = celery_actions.async:AsyncAction
